@@ -14,10 +14,12 @@ perl                    = 5.006
 Carp                    = 0
 Digest::SHA             = 0
 Exception::Class        = 0
+Exporter                = 0
 File::Spec              = 0
 JSON::XS                = 1
 LWP                     = 5
 HTTP::Request::Common   = 0
+Try::Tiny               = 0.04
 URI                     = 1
 
 [Prereqs / RuntimeRecommends]
